[package]
name = "inventory-svc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# Process B of the split: hosts inventory and fills inventory's `characters`
# AND `config` dependencies with `remote::Stub`s that dial A / config-svc over the QUIC
# edge. Since Step 5 config lives in its OWN process (config-svc): B holds a `config` stub
# whose `configrpc` factory swaps in a snapshot-backed `CachedConfig`. It hosts NO gateway
# (FrontDoor) — the single public front door lives only in gateway-svc + the monolith, so
# no accounts stub is needed. It imports the inventory + remote crates and the
# `charactersrpc` / `configrpc` glue (passed into the stubs) — but NEVER the
# characters/config IMPL crates.
[[bin]]
name = "inventory-svc"
path = "src/main.rs"

[dependencies]
app = { workspace = true }
lifecycle = { workspace = true }
metrics = { workspace = true }
edge = { workspace = true }
inventory = { workspace = true }
remote = { workspace = true }
# The characters + config glue: this cmd/ root passes each provider's
# `remote_factories()` into the generic `remote::Stub` (Steps 4–5). rule 5 sanctions
# cmd/* importing the glue; it still never names the provider IMPL crates.
charactersrpc = { workspace = true }
configrpc = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
