[package]
name = "leaderboard-svc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# The leaderboard fortress process (Step 10). Hosts leaderboard + messaging and stands up
# one shared QUIC edge server (EDGE_ADDR, :9008 in the run scripts) so gateway-svc can
# dispatch `GET /leaderboard` Remote to it. leaderboard owns schema `leaderboard` + an
# inbox, so it needs a DB pool + the messaging durable plane (its `POST /events` inbound
# sink receives `match.finished` from match-svc; its durable `on_tx` upserts wins+1 on the
# handed inbox-dedup tx). It hosts NO gateway (FrontDoor) — the single public front door
# lives only in gateway-svc + the monolith, so no accounts stub is needed. Mirrors
# `characters-svc`'s shape.
[[bin]]
name = "leaderboard-svc"
path = "src/main.rs"

[dependencies]
app = { workspace = true }
edge = { workspace = true }
lifecycle = { workspace = true }
metrics = { workspace = true }
leaderboard = { workspace = true }
messaging = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
