[package]
name = "rating-svc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# The rating fortress process (Step 10). Hosts rating and stands up one
# shared QUIC edge server (EDGE_ADDR, :9007 in the run scripts) serving `rating.mmr` so
# match-svc's stub resolves the MMR read over mTLS. rating owns NO schema, but its
# durable `rating.match-finished.v1` subscription needs a pull checkpoint, so this process
# still needs a DB pool and thus hosts the durable-events plane (app-owned, DB ⇒ plane;
# its pull worker drains
# `match.finished` from match-svc). No gateway: rating fronts no typed op and no player
# plane — it is a wire-only provider + a durable event reactor.
[[bin]]
name = "rating-svc"
path = "src/main.rs"

[dependencies]
app = { workspace = true }
lifecycle = { workspace = true }
metrics = { workspace = true }
edge = { workspace = true }
rating = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
