[package]
name = "scheduler-svc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# The scheduler fortress process (Step 9). Hosts scheduler + messaging and stands up one
# shared QUIC edge server so a remote admin process pulls scheduler's read-only
# `admin.adminData` "Schedules" page over the mTLS edge. scheduler owns schema
# `scheduler` and is a DURABLE PRODUCER (its `scheduler.fired` events ride the outbox),
# so this process needs a DB pool AND the messaging durable plane. No gateway module: it
# fronts no typed ops and no player plane — it is a pure event source.
[[bin]]
name = "scheduler-svc"
path = "src/main.rs"

[dependencies]
app = { workspace = true }
lifecycle = { workspace = true }
metrics = { workspace = true }
edge = { workspace = true }
scheduler = { workspace = true }
messaging = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
