[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
lifecycle = { workspace = true }
edge = { workspace = true }
bus = { workspace = true }
metrics = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }
axum = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
