[package]
name = "asyncevents"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
bus = { workspace = true }
outbox = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
sqlx = { workspace = true, features = ["json"] }
axum = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
# The Plane is not a Module, so `lifecycle` is test-only: the transport-liveness
# test drives Context::with_db_and_transport the way app::run does.
lifecycle = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
