[package]
name = "asyncevents"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
bus = { workspace = true }
# The plane's lag/frontier gauges register into the process's private Prometheus
# registry (core/metrics::register) so they ride the same GET /metrics scrape.
metrics = { workspace = true }
prometheus = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
sqlx = { workspace = true, features = ["json"] }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
# The Plane is not a Module, so `lifecycle` is test-only: the transport-liveness
# test drives Context::with_db_and_transport the way app::run does.
lifecycle = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
