[package]
name = "conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# Deliberately dependency-free (std only): the contract types must be importable
# by every module without dragging tokio/sqlx/futures — rule 16 passes trivially.
[dependencies]
