[package]
name = "edge"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
opsapi = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
rcgen = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
proptest = { workspace = true }
