[package]
name = "lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
bus = { workspace = true }
registry = { workspace = true }
contrib = { workspace = true }
invalidation = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
