[package]
name = "opsapi"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
contrib = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
