[package]
name = "remote"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# `remote` — the registry SWAP, now GENERIC process infrastructure in core/ (Step 4).
# A `Stub` module stands in for a provider hosted in a PEER process: in phase-1
# `register` it runs the provider-swap closures (`RemoteFactory`s) it was constructed
# with, which `provide` a generated edge CLIENT under the SAME capability keys the
# local impl would, so a co-hosted consumer's `require` is topology-blind. It imports
# ONLY foundations + edge — NEVER any `api/` crate: the factories arrive as boxed
# closures produced by each domain's `<name>rpc::remote_factories()` and passed in
# from `cmd/*`. This is the core-leaf rule (no api/ dep in dependencies OR
# dev-dependencies, verified by `cargo tree -p remote`).
[dependencies]
contrib = { workspace = true }
edge = { workspace = true }
opsapi = { workspace = true }
lifecycle = { workspace = true }
# Readiness slot: each `Stub` contributes an `httpmw::ReadyCheck` so a stub-holding
# process's `/readyz` probes its peers' reachability. core→core (edge/opsapi/lifecycle
# are already core deps) — legal; archcheck's core-leaf rule bans only core→module/api.
httpmw = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
# Boxed boot futures for the `RemoteBoot` start hook (Step 5): a factory registers an
# async boot closure the `Stub` runs at `start`.
futures = { workspace = true }
# `resolve_peer` (the orchestrator agent's `resolve` client). NAMED COST: `remote` had
# only `tokio = features=["sync"]`; reqwest pulls hyper (and the workspace's rustls-tls
# pin) into every `cmd/*-svc` that holds a Stub. Accepted: `remote` is where the design
# puts this client so `Stub` can use it at re-resolve, and rustls is already in the graph
# via `edge`/quinn. `rustls-tls` is ring-backed — `aws-lc-rs` must never enter the tree.
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# The swap is proven with LOCAL test fakes (no api/ crate): fake factories provide a
# fake capability under a registry key. registry is a core crate, not an api/ crate.
registry = { workspace = true }
# `net`/`io-util` are for `resolve_tests`'s OWN fake agent (a raw TCP HTTP/1.1 canner):
# `remote` is in the SHIPPING graph, so it may never dev-dep `weles` to test against the
# real server — see `resolve::resolve_peer`'s doc. `time` bounds the tests' hang guards.
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time"] }
