[workspace]
resolver = "2"
members = [
    "crates/registry",
    "crates/contrib",
    "crates/bus",
    "crates/lifecycle",
    "crates/opsapi",
    "crates/edge",
    "crates/edgeca",
    "crates/app",
    "crates/rpc-macro",
    "crates/rpc-macro-tests",
    "crates/outbox",
    "crates/messaging",
    "crates/adminapi",
    "crates/configapi",
    "crates/configevents",
    "crates/config",
    "crates/charactersevents",
    "crates/charactersapi",
    "crates/characters",
    "crates/inventoryapi",
    "crates/inventory",
    "crates/gateway",
    "crates/remote",
    "crates/server",
    "crates/characters-svc",
    "crates/inventory-svc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# Pinned once here, referenced by `.workspace = true` in each crate. Keeps the
# leaf foundations on one coherent set of async/DB/serde versions.
[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
axum = "0.7"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
futures = "0.3"
proptest = "1"
# HTTP client for the outbox relay's remote delivery (POST /events). rustls to align
# with the edge stack's TLS; default (native-tls) features off.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# QUIC + mutual TLS stack for the edge transport (Step 4). Pinned once here.
quinn = "0.11"
# TLS 1.3 only: the `tls12` feature is deliberately NOT enabled (mTLS point 5).
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen = "0.13"

# proc-macro toolchain for the `#[rpc]` codegen crate (Step 5).
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# Structured-logging subscriber for the process entrypoints (server + the two *-svc).
tracing-subscriber = "0.3"

# Internal foundation crates (leaves import only each other, never a module).
registry = { path = "crates/registry" }
contrib = { path = "crates/contrib" }
bus = { path = "crates/bus" }
lifecycle = { path = "crates/lifecycle" }
opsapi = { path = "crates/opsapi" }
edge = { path = "crates/edge" }
app = { path = "crates/app" }
rpc-macro = { path = "crates/rpc-macro" }
outbox = { path = "crates/outbox" }
messaging = { path = "crates/messaging" }
gateway = { path = "crates/gateway" }
remote = { path = "crates/remote" }

# Contract crates (types-only surfaces shared by modules, like Go's api/ tree) plus
# the config impl module. Contracts import no module; config imports only contracts.
adminapi = { path = "crates/adminapi" }
configapi = { path = "crates/configapi" }
configevents = { path = "crates/configevents" }
config = { path = "crates/config" }

# The characters domain: published events, the pure capability contract (traits +
# generated rpc glue), and the impl module.
charactersevents = { path = "crates/charactersevents" }
charactersapi = { path = "crates/charactersapi" }
characters = { path = "crates/characters" }

# The inventory domain: the pure Holdings capability contract (traits + generated
# rpc glue) and the impl module (polymorphic Owner, no cross-module FK, on_tx
# grant-starter/wipe — the integrity-via-event proof).
inventoryapi = { path = "crates/inventoryapi" }
inventory = { path = "crates/inventory" }
