[workspace]
resolver = "2"
members = [
    # Foundations — imported by everyone, import no module (Go's root leaves + opsapi/edge/outbox + internal/app).
    "core/registry",
    "core/contrib",
    "core/bus",
    "core/lifecycle",
    "core/opsapi",
    "core/edge",
    "core/outbox",
    "core/app",
    # Tooling — codegen + the dev-CA minter (Go's tools/).
    "tools/rpc-macro",
    "tools/rpc-macro-tests",
    "tools/edgeca",
    # Contract surfaces, grouped by domain (Go's api/<name>/ tree). Types-only; import no module.
    "api/characters/rpc",
    "api/characters/events",
    "api/inventory/rpc",
    "api/config/api",
    "api/config/events",
    "api/admin/api",
    # Module implementations — private, reachable only from a cmd/ binary.
    "modules/config",
    "modules/characters",
    "modules/inventory",
    "modules/gateway",
    "modules/messaging",
    "modules/remote",
    # Process entrypoints (Go's cmd/).
    "cmd/server",
    "cmd/characters-svc",
    "cmd/inventory-svc",
    "cmd/gateway-svc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# Pinned once here, referenced by `.workspace = true` in each crate. Keeps the
# leaf foundations on one coherent set of async/DB/serde versions.
[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
axum = "0.7"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
futures = "0.3"
proptest = "1"
# HTTP client for the outbox relay's remote delivery (POST /events). rustls to align
# with the edge stack's TLS; default (native-tls) features off.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# QUIC + mutual TLS stack for the edge transport. Pinned once here.
quinn = "0.11"
# TLS 1.3 only: the `tls12` feature is deliberately NOT enabled (mTLS point 5).
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen = "0.13"

# proc-macro toolchain for the `#[rpc]` codegen crate.
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# Structured-logging subscriber for the process entrypoints (server + the two *-svc).
tracing-subscriber = "0.3"

# ---- Foundations (core/): leaves import only each other, never a module. ----
registry = { path = "core/registry" }
contrib = { path = "core/contrib" }
bus = { path = "core/bus" }
lifecycle = { path = "core/lifecycle" }
opsapi = { path = "core/opsapi" }
edge = { path = "core/edge" }
outbox = { path = "core/outbox" }
app = { path = "core/app" }

# ---- Tooling (tools/): the #[rpc] codegen. ----
rpc-macro = { path = "tools/rpc-macro" }

# ---- Contract surfaces (api/<name>/): types-only, shared by modules, import no module. ----
adminapi = { path = "api/admin/api" }
configapi = { path = "api/config/api" }
configevents = { path = "api/config/events" }
charactersevents = { path = "api/characters/events" }
charactersrpc = { path = "api/characters/rpc" }
inventoryrpc = { path = "api/inventory/rpc" }

# ---- Module implementations (modules/): private impl, reachable only from cmd/. ----
config = { path = "modules/config" }
characters = { path = "modules/characters" }
inventory = { path = "modules/inventory" }
gateway = { path = "modules/gateway" }
messaging = { path = "modules/messaging" }
remote = { path = "modules/remote" }
