[package]
name = "accounts"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# The accounts impl module (port of Go's modules/accounts): owns schema `accounts`,
# is a trusted VERIFIER of external identities (Epic OIDC) with a gated local
# dev/password provider, mints opaque DB-backed sessions, and emits
# player.registered on the DURABLE plane atomic with the registration write. An
# impl crate — no OTHER module imports it; consumers use `accountsapi` (traits) +
# `accountsevents` (events). `accountsrpc` is its OWN glue (sanctioned): the edge
# register_server faces.
[dependencies]
bus = { workspace = true }
lifecycle = { workspace = true }
registry = { workspace = true }
opsapi = { workspace = true }
edge = { workspace = true }
accountsapi = { workspace = true }
accountsrpc = { workspace = true }
accountsevents = { workspace = true }
# The scheduler's event CONTRACT crate only (any module may import an events crate):
# accounts reacts to scheduler.fired{name} to prune expired sessions on a daily cadence.
# No dep on the scheduler impl/api and no requires() change — audit's prune precedent.
schedulerevents = { workspace = true }
futures = { workspace = true }
adminapi = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# The Epic OAuth browser flow mounts two HTTP-native routes on the shared router.
axum = { workspace = true }
# JWKS fetch + OAuth code exchange (rustls, json).
reqwest = { workspace = true }
# Identity stack: argon2id hashing (Go-compatible PHC strings), OIDC verification,
# 32-byte base64url session tokens, authorize-URL building.
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }

[dev-dependencies]
# The durable plane under test: registration emits player.registered via emit_tx,
# so the integration tests install asyncevents' `bus::Transport` and assert the
# outbox row (asyncevents is a core crate, not an api/ crate — no boundary violation).
asyncevents = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
# Self-minted RS256 test JWTs + a local JWKS fixture (NO live Epic calls): an RSA
# key is generated in-test, exported as PKCS#8 PEM for jsonwebtoken and as (n, e)
# for the JWKS document — the port of Go's accounts_test.go buildJWKS approach.
rsa = { version = "0.9", features = ["pem"] }
